[tool.poetry]
name = "amtb-search"
version = "0.1.0"
description = ""
authors = ["Long Yao <yl1984108@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^3.17.0"
llama-index = {version = "^0.8.68", python = ">=3.11,<3.12"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
